tests/error/misc_errors/barrier_drop_lval.err
Error: Drop violation (at $FILE:14:3)
   | 
12 | @no_type_check
13 | def main() -> None:
14 |    q = qubit()
   |    ^ Variable `q` with non-droppable type `qubit` is leaked

Help: Make sure that `q` is consumed or returned to avoid the leak

Guppy compilation failed due to 1 previous error
